# fitness_log

./: .gitignore  startup_dev.bat
backend/: README.md  pyproject.toml
backend/app/: main.py
backend/app/core/: database.py  models.py
backend/app/fitness/: models.py  router.py  schemas.py  service.py
backend/app/masterdata/: models.py  schemas.py  service.py
backend/app/static/: index.html
backend/app/static/assets/: Exercises-0Goh73U3.js  Exercises-CeiWlfAf.css  Exercises-D8OEobkf.js  Logs-DKzRQ4dS.js  Logs-DPJd4rGe.css  Logs-MzGjhAJG.js  Training-CiWJdaY4.css  Training-JXJvsqAl.css  Training-hWeU1mel.js  Training-thF0fBy5.js  index-B2-oSflo.js  index-Bbbvtfa9.js  index-DY-kx2k2.css  index-N-zblE3b.css  trash-2--WzwhY8Z.js  trash-2-zQpmGgqF.js
backend/app/templates.bak/: index.html
backend/app/templates.bak/static/css/: root.css  style.css
backend/app/templates.bak/static/css/components/: badges.css  buttons.css  calendar.css  cards.css  forms.css  modals.css  scroll-area.css  set-card.css
backend/app/templates.bak/static/css/layouts/: footer.css  header.css  main.css
backend/app/templates.bak/static/js/: api.js  app.js
backend/app/templates.bak/static/js/pages/: exercises.js  home.js  logs.js  training.js
frontend/: components.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  main.ts  style.css
frontend/src/api/: index.ts
frontend/src/components/: FButton.vue  FCalendar.vue  FCard.vue  FDialog.vue  FSelect.vue
frontend/src/composables/: useFooter.ts  useTraining.ts
frontend/src/page/: Exercises.vue  (+3 more)
(+3 files in other folders)
