[project]
name = "fitness-log-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.1",
    "fastapi>=0.128.0",
    "jinja2>=3.1.6",
    "pydantic>=2.12.5",
    "sqlalchemy>=2.0.45",
    "tzdata>=2024.1",
    "uvicorn>=0.40.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
